@@ -1,3 +1,7 @@
+2018-06-11 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Do not automatically update all exchange rates sources if not needed
+
 2018-06-09 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Use mycurrency.net html instead of the json data, which has not been for a month
